--- a/face_detection_infrared_image/infrared_eye_detection.ipynb
+++ b/face_detection_infrared_image/infrared_eye_detection.ipynb
@@ -73,6 +73,9 @@
     "                cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255,0,0), 2)\n",
     "        # Draw a contour around the left eye\n",
     "        cv2.rectangle(frame, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
+    "    else:\n",
+    "         # If left eye is not detected, handle the case here\n",
+    "        pass\n",
     "\n",
     "    # Check if the right eye is closed\n",
     "    if right_eye is not None:\n",
@@ -88,6 +91,9 @@
     "                cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255,0,0), 2)\n",
     "         # Draw a contour around the right eye\n",
     "        cv2.rectangle(frame, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
+    "    else:\n",
+    "         # If right eye is not detected, handle the case here\n",
+    "        pass\n",
     "\n",
     "\n",
     "    # Show the frame in a window\n",
